# youtube-uploader

./: .gitignore  README.md  auth.py  pyproject.toml  requirements.txt  setup.py  upload.py
.github/workflow/: publish.yml
.github/workflows/: main.yml
src/: main.py
src/utils/: auth.py  upload.py
tests/: test_auth.py
youtube-up/: upload.py
